GL/Projet_GL/src/test/deca/context/valid/sansObjet/print/print_all_types.deca
// Test : print_all_types
// But : tester l’affichage de plusieurs types.
// Couvre : print, println, int, float, string.
// Résultat attendu : affiche les valeurs.

{
    print(3);
    println(3.5);
    println("hello");
}